testdata/parser/negative/19.txt
Parse error at 19.pdl:7:5: Component definition must not return
				return 5;
				^
